--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -24,7 +24,7 @@
 }
 
 .header .img {
-    width: 225px;
-    height: 38.72px;
+    /* width: 225px;
+    height: 38.72px; */
     margin-right: 10px;
 }
