--- a/src/pages/Register/style.css
+++ b/src/pages/Register/style.css
@@ -15,6 +15,7 @@
 main
 {
     padding: 90px;
+    padding: 20px;
     text-align: left;
     background-color: lightblue;
     width: var(--container-content-width);
