--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,18 +1,17 @@
- .footer {
+.footer {
      display: flex;
      justify-content: center;
      align-items: center;
      background-color: var(--head-background-color);
 
-     position: fixed;
-     bottom: 40px;
+     position: static;
      width: 100%;
      min-height: 203px;
  }
 
  .footer .footer-container {
 
-     position: fixed;
+     position: static;
      bottom: 40px;
      width: var(--container-content-width);
      min-height: 203px;
@@ -24,26 +23,28 @@
      grid-template-columns: 450px 1fr;
  }
 
- .footer .last {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     background-color: var(--gold-bg-color);
-     position: fixed;
-     bottom: 0px;
-     width: 100%;
-     min-height: 40px;
+.last {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--gold-bg-color);
+
+    position: static;
+    width: 100%;
+    min-height: 40px;
  }
 
- .footer .last-container {
-     position: flex;
-     bottom: 0px;
-     width: var(--container-content-width);
-     min-height: 40px;
-     justify-content: center;
-     align-items: center;
-     display: flex;
-     color: #fff;
+.last .last-container {
+
+    position: static;
+    width: var(--container-content-width);
+    min-height: 40px;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+
+    display: grid;
+    grid-template-columns: 450px 1fr;
  }
 
  .footer .last-txt {
@@ -91,43 +92,42 @@
      padding: 0px 0px 0px 15px;
  }
 
- @media only screen and (max-width:1200px) {
-    .footer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: var(--head-background-color);
-   
-        position: fixed;
-        bottom: 40px;
-        width: 100%;
-        min-height: 203px;
-    }
-   
-    .footer .footer-container {
-   
-        position: fixed;
-        bottom: 40px;
-        width: 100%;
-        min-height: 203px;
-        color: #fff;
-        justify-content: center;
-        align-items: center;
-   
-        display: grid;
-        grid-template-columns: 300px 1fr;
-    }
-    .footer .data-side {
-        /* background-color: darkorange; */
-        display: grid;
-        grid-template-columns: 200px 150px 1fr;
-        gap: 20px 0px;
-        font-size: 14px;
-    }
- }
- @media only screen and (max-width:915px) {
-    
-}
-@media only screen and (max-width:810px) {
- 
-}
+ /* @media only screen and (max-width:1200px) {
+     .footer {
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         background-color: var(--head-background-color);
+
+         position: fixed;
+         bottom: 40px;
+         width: 100%;
+         min-height: 50vh;
+     }
+
+     .footer .footer-container {
+
+         position: fixed;
+         bottom: 40px;
+         width: 100%;
+         min-height: 50vh;
+         color: #fff;
+         justify-content: center;
+         align-items: center;
+         display: grid;
+     }
+
+     .footer .contact-side {
+         /*background-color: crimson;
+         margin: 0px 0px 0px 50px;
+     }
+
+     .footer .data-side {
+         /* background-color: darkorange;
+         width: 100%;
+         display: grid;
+         grid-template-columns: 1fr 1fr 1fr;
+         gap: 20px 0px;
+         font-size: 14px;
+     }
+ } */
