--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,27 +1,25 @@
 .footer {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     background-color: var(--head-background-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--head-background-color);
 
-     position: static;
-     width: 100%;
-     min-height: 203px;
- }
+    position: static;
+    width: 100%;
+    min-height: 203px;
+}
 
- .footer .footer-container {
+.footer .footer-container {
+    position: static;
+    width: var(--container-content-width);
+    min-height: 203px;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
 
-     position: static;
-     bottom: 40px;
-     width: var(--container-content-width);
-     min-height: 203px;
-     color: #fff;
-     justify-content: center;
-     align-items: center;
-
-     display: grid;
-     grid-template-columns: 450px 1fr;
- }
+    display: grid;
+    grid-template-columns: 450px 1fr;
+}
 
 .last {
     display: flex;
@@ -32,7 +30,7 @@
     position: static;
     width: 100%;
     min-height: 40px;
- }
+}
 
 .last .last-container {
 
@@ -43,56 +41,58 @@
     justify-content: center;
     align-items: center;
 
+    display: flex;
+}
+
+.last .last-txt{
+    flex: 100%;
+}
+.last .last-language{
+    flex: 10%;
+}
+
+.footer .contact-side {
+    /*background-color: crimson;*/
+    margin-top: 0px;
+}
+
+.footer .contact-txt {
+    margin: 10px 0px 10px 0px;
+    font-weight: 550;
+}
+
+
+.footer .phone-number {
+    font-weight: 550;
+    margin: 0px 0px 0px 10px;
+}
+
+.footer .data-side {
+    /* background-color: darkorange; */
     display: grid;
-    grid-template-columns: 450px 1fr;
- }
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px 0px;
+    font-size: 14px;
+}
 
- .footer .last-txt {
-     flex: 100%;
- }
+.footer .logo {
+    margin: 0px 3px 0px 0px;
+}
 
- .footer .contact-side {
-     /*background-color: crimson;*/
-     margin-top: 0px;
- }
+.footer .phone {
+    display: flex;
+    margin: 0px 0px 20px 0px;
+}
 
- .footer .contact-txt {
-     margin: 10px 0px 10px 0px;
-     font-weight: 550;
- }
+.footer .contact-icon {
+    display: flex;
+}
 
+.footer .icon {
+    padding: 0px 0px 0px 15px;
+}
 
- .footer .phone-number {
-     font-weight: 550;
-     margin: 0px 0px 0px 10px;
- }
-
- .footer .data-side {
-     /* background-color: darkorange; */
-     display: grid;
-     grid-template-columns: 1fr 1fr 1fr;
-     gap: 20px 0px;
-     font-size: 14px;
- }
-
- .footer .logo {
-     margin: 0px 3px 0px 0px;
- }
-
- .footer .phone {
-     display: flex;
-     margin: 0px 0px 20px 0px;
- }
-
- .footer .contact-icon {
-     display: flex;
- }
-
- .footer .icon {
-     padding: 0px 0px 0px 15px;
- }
-
- /* @media only screen and (max-width:1200px) {
+/* @media only screen and (max-width:1200px) {
      .footer {
          display: flex;
          justify-content: center;
