--- a/src/components/Register/style.css
+++ b/src/components/Register/style.css
@@ -35,7 +35,7 @@
 }
 
 .registerpage .right-column {
-    background-color: #c3beed;
+    background-color: #ffffff;
     padding: 20px;
     border-left: 1px solid #ddd;
 }
