--- a/src/pages/Register/form/style.css
+++ b/src/pages/Register/form/style.css
@@ -1,8 +1,29 @@
+@font-face {
+    font-family: 'Sukhumvit Set Medium';
+    src: url('../../assets/SukhumvitSet/SukhumvitSet-Medium.ttf') format('truetype');
+
+    font-family: 'Sukhumvit Set Bold';
+    src: url('../../assets/SukhumvitSet/SukhumvitSet-Bold.ttf') format('truetype');
+
+    font-family: 'Sukhumvit Set Light';
+    src: url('../../assets/SukhumvitSet/SukhumvitSet-Light.ttf') format('truetype');
+
+    font-family: 'Sukhumvit Set SemiBold';
+    src: url('../../assets/SukhumvitSet/SukhumvitSet-SemiBold.ttf') format('truetype');
+
+    font-family: 'Sukhumvit Set Thin';
+    src: url('../../assets/SukhumvitSet/SukhumvitSet-Thin.ttf') format('truetype');
+
+    font-family: 'Sukhumvit Set Text';
+    src: url('../../assets/SukhumvitSet/SukhumvitSet-Text.ttf') format('truetype');
+}
+
 .registerform {
     display: flex;
     flex-direction: column;
     max-width: 300px;
     margin: 0 auto;
+    font-family: 'Sukhumvit Set Text';
 }
 
 .registerform .div {
@@ -13,6 +34,7 @@
     display: block;
     font-weight: bold;
     margin-bottom: 0.5rem;
+    color: #959594;
 }
 
 .registerform .input {
@@ -20,4 +42,12 @@
     font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 4px;
+}
+
+.registerform h3 {
+    font-size: 14px;
+    font-family: 'Sukhumvit Set Thin';
+    color: #959594;
+    ;
+
 }
