--- a/src/components/Register/style.css
+++ b/src/components/Register/style.css
@@ -1,30 +1,27 @@
-@font-face {
-    font-family: "Kittithada Bold 75";
-    src: url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.eot");
-    src: url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.eot?#iefix")format("embedded-opentype"),
-    url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.woff2")format("woff2"),
-    url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.woff")format("woff"),
-    url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.ttf")format("truetype"),
-    url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.svg#Kittithada Bold 75")format("svg");
-}
-
 .registerpage {
     background-color: rgb(184, 230, 173);
-    position: static;
-    top: 68px;
+    /* position: static; */
+    /* top: 68px; */
     text-align: left;
-    min-height: 1000px;
+    /* min-height: 1000px; */
+    /* max-width: var(--container-content-width); */
+    width: 100%;
+    padding: 80px 0 0 0;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
+.registerpage .card-group {
+    width: 100%;
+    max-width: var(--form-card-width); 
+}
 .registerpage .register-content {
-    width: var(--container-content-width); 
-    padding: 20px;
+    /* max-width: var(--container-content-width);  */
+    width: 100%;
+    padding: 60px 20px;
     display: grid;
-    grid-template-columns: 450px 450px;
-    height: 500px;
+    grid-template-columns: 1fr 1fr;
+    /* height: 500px; */
     justify-content: center;
     /* gap: 20px; */
 }
@@ -38,13 +35,4 @@
     background-color: #ffffff;
     padding: 20px;
     border-left: 1px solid #ddd;
-}
-
-.registerpage h1 {
-    font-size: 25px;
-    font-weight: bold;
-    font-family: 'Kittithada Bold 75';
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
 }
