--- a/src/main.css
+++ b/src/main.css
@@ -4,22 +4,69 @@
     --head-background-color: #00605C;
     --gold-bg-color: #937553;
     --container-content-width: 1200px;
-    --background-size-width: 1180px;
+    --form-card-width: 1000px;
 }
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Sukhumvit Set Medium';
 }
-body
-{
+
+body {
     width: 100%;
     height: 100%;
 }
 
-.label-text
-{
+.label-text {
     font-size: 12px;
     color: black;
+}
+
+@font-face {
+    font-family: "Kittithada Bold 75";
+    src: url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.eot");
+    src: url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.eot?#iefix")format("embedded-opentype"),
+        url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.woff2")format("woff2"),
+        url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.woff")format("woff"),
+        url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.ttf")format("truetype"),
+        url("https://db.onlinewebfonts.com/t/db90f804a271625c29dc5fdc8ab47058.svg#Kittithada Bold 75")format("svg");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Sukhumvit Set';
+    src: local("SukhumvitSet") url('../../assets/SukhumvitSet/SukhumvitSet-Thin.ttf') format('truetype');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Sukhumvit Set';
+    src: local("SukhumvitSet") url('../../assets/SukhumvitSet/SukhumvitSet-Light.ttf') format('truetype');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Sukhumvit Set';
+    src: local("SukhumvitSet") url('../../assets/SukhumvitSet/SukhumvitSet-Text.ttf') format('truetype');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'Sukhumvit Set';
+    src: local("SukhumvitSet") url('../../assets/SukhumvitSet/SukhumvitSet-Medium.ttf') format('truetype');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Sukhumvit Set';
+    src: local("SukhumvitSet") url('../../assets/SukhumvitSet/SukhumvitSet-SemiBold.ttf') format('truetype');
+    font-weight: 800;
+}
+
+@font-face {
+    font-family: 'Sukhumvit Set';
+    src: local("SukhumvitSet") url('../../assets/SukhumvitSet/SukhumvitSet-Bold.ttf') format('truetype');
+    font-weight: 900;
 }
