--- a/src/pages/Register/RegisterContainer/style.css
+++ b/src/pages/Register/RegisterContainer/style.css
@@ -1,5 +1,6 @@
 .registerpage {
     background-color: rgb(184, 230, 173);
+    /* background-color: white; */
     /* position: static; */
     /* top: 68px; */
     text-align: left;
