--- a/src/pages/OTP/RequestContainer/style.css
+++ b/src/pages/OTP/RequestContainer/style.css
@@ -4,7 +4,7 @@
     /* position: static; */
     /* top: 68px; */
     text-align: center;
-    /* min-height: 1000px; */
+    min-height: 681px;
     /* max-width: var(--container-content-width); */
     width: 100%;
     padding: 80px 0 0 0;
