--- a/src/pages/Home/homeContainer/style.css
+++ b/src/pages/Home/homeContainer/style.css
@@ -17,17 +17,39 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 27px 0 0 0;
 }
 
-.HomePage .top {
+.HomePage .first {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.HomePage .second {
+    background-color: lightskyblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.HomePage .third {
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.HomePage .fourth {
     background-color: pink;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.HomePage .under {
-    background-color: yellowgreen;
+.HomePage .fifth {
+    background-color: lightgreen;
     display: flex;
     align-items: center;
     justify-content: center;
