--- a/src/pages/Home/hostpital/style.css
+++ b/src/pages/Home/hostpital/style.css
@@ -44,6 +44,7 @@
     justify-content: center;
     align-items: center;
     border: none;
+    color: #585958;
 }
 
 .hostpital .box:hover {
@@ -57,6 +58,20 @@
     justify-content: center;
     align-items: center;
     border: none;
+}
+
+.hostpital .box:active {
+    width: 215px;
+    height: 92px;
+    border-radius: 6px;
+    background-color: gray;
+    box-shadow: 0px 2px 22px 0px #879B9438;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    color: #FFFFFF;
 }
 
 .hostpital .img {
