--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -100,6 +100,15 @@
     padding: 0px 0px 0px 15px;
 }
 
+.footer a{
+    text-decoration: none;
+    color: #fff;
+}
+
+
+
+
+
 /* @media only screen and (max-width:1200px) {
      .footer {
          display: flex;
