--- a/src/pages/Home/homeContainer/style.css
+++ b/src/pages/Home/homeContainer/style.css
@@ -28,7 +28,7 @@
 }
 
 .HomePage .second {
-    background-color: lightskyblue;
+    background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,10 +42,11 @@
 }
 
 .HomePage .fourth {
-    background-color: pink;
+    background-color: #636463;
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 100%;
 }
 
 .HomePage .fifth {
