--- a/src/pages/Home/hostpital/style.css
+++ b/src/pages/Home/hostpital/style.css
@@ -1,6 +1,6 @@
 .hostpital {
     display: flex;
-    margin: 20px;
+    margin: 20px 0 100px 0;
 }
 
 .hostpital .hostContainer {
@@ -43,35 +43,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: none;
+    border: solid #FFFFFF;
     color: #585958;
+    transition: 0.3s;
+
 }
 
 .hostpital .box:hover {
-    width: 215px;
-    height: 92px;
-    border-radius: 6px;
-    background-color: lightgray;
-    box-shadow: 0px 2px 22px 0px #879B9438;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: none;
-}
-
-.hostpital .box:active {
-    width: 215px;
-    height: 92px;
-    border-radius: 6px;
-    background-color: gray;
-    box-shadow: 0px 2px 22px 0px #879B9438;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    color: #FFFFFF;
+    border: 1.5px solid #bfd2d1;
+    box-shadow: 0px 10px 10px 0px #bfd2d1;
 }
 
 .hostpital .img {
