--- a/src/pages/Home/hostpital/style.css
+++ b/src/pages/Home/hostpital/style.css
@@ -23,6 +23,17 @@
 
 .hostpital a {
     color: #9E7F5D;
+    font-family: Sukhumvit Set;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20.3px;
+    text-align: center;
+
+    transition: 0.3s;
+}
+
+.hostpital a:hover {
+    color: #585958;
 }
 
 .hostpital .boxContainer {
