--- a/src/pages/Home/Benefits/style.css
+++ b/src/pages/Home/Benefits/style.css
@@ -1,24 +1,31 @@
-.BenefitsContainer {
+.Benefits {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.Benefits .BenefitsContainer {
     position: relative;
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     margin-bottom: 50px;
     margin-top: 20px;
     width: 100vh;
     z-index: 1;
 }
 
-.BenefitsContainer h3 {
+.Benefits h3 {
     font-family: 'Sukhumvit Set';
-    font-size: 28px;
+    font-size: 34px;
     font-weight: 700;
     line-height: 34.88px;
     text-align: left;
     margin-bottom: 3px;
 }
 
-.BenefitsContainer h4 {
+.Benefits h4 {
     font-family: 'Sukhumvit Set';
     font-size: 16px;
     font-weight: 400;
@@ -26,49 +33,49 @@
     text-align: left;
 }
 
-.BenefitsContainer .BenefitCard {
+.Benefits .BenefitCard {
     position: relative;
 }
 
-.BenefitsContainer .ImageContainer {
+.Benefits .ImageContainer {
     position: relative;
 }
 
-.BenefitsContainer .benefitImageOverlay {
+.Benefits .benefitImageOverlay {
     position: absolute;
     width: 182px;
-   
-    top: 125px;
-    left: 130px;
+
+    top: 170px;
+    left: 145px;
 
     transform: translate(-50%, -50%);
     color: white;
     text-align: left;
 }
 
-.BenefitsContainer .searchHospitalImageOverlay {
+.Benefits .searchHospitalImageOverlay {
     position: absolute;
     width: 246px;
-    top: 125px;
-    left: 160px;
+    top: 170px;
+    left: 170px;
 
     transform: translate(-50%, -50%);
     color: white;
     text-align: left;
 }
 
-.BenefitsContainer .articleImageOverlay {
+.Benefits .articleImageOverlay {
     position: absolute;
     width: 177px;
-    top: 125px;
-    left: 120px;
+    top: 170px;
+    left: 145px;
 
     transform: translate(-50%, -50%);
     color: white;
     text-align: left;
 }
 
-.BenefitsContainer .link {
+.Benefits .link {
     font-size: 12px;
     font-weight: 500;
     font-family: 'Sukhumvit Set Thin';
@@ -76,23 +83,93 @@
     text-decoration: none;
 }
 
-.BenefitsContainer .benefitspic {
-    width: 294px;
-    height: 202px;
+.Benefits .benefitspic-container {
+    position: relative;
+    width: 380px;
+    height: 260px;
+}
+
+.Benefits .benefitspic-overlay {
+    position: absolute;
+    top: 13px;
+    left: 22px;
+    width: 335px;
+    height: 230px;
+    border-radius: 8px;
+    background-color: rgba(0, 96, 92, 0.5);
+    transition: opacity 0.3s ease;
+    opacity: 0;
+}
+
+.Benefits .benefitspic-container:hover .benefitspic-overlay {
+    opacity: 1;
+
+}
+
+.Benefits .benefitspic-container .benefitspic {
+    width: 100%;
+    height: 100%;
     top: 664px;
     left: 262px;
+    object-fit: cover;
 }
 
-.BenefitsContainer .searchHospitalpic {
-    width: 294px;
-    height: 202px;
+.Benefits .searchHospitalpic-container .searchHospitalpic {
+    width: 100%;
+    height: 100%;
     top: 664px;
     left: 573px;
+    object-fit: cover;
 }
 
-.BenefitsContainer .articlepic {
-    width: 294px;
-    height: 202px;
+.Benefits .searchHospitalpic-container {
+    position: relative;
+    width: 380px;
+    height: 260px;
+}
+
+.Benefits .searchHospitalpic-overlay {
+    position: absolute;
+    top: 13px;
+    left: 22px;
+    width: 335px;
+    height: 230px;
+    border-radius: 8px;
+    background-color: rgba(0, 96, 92, 0.5);
+    transition: opacity 0.3s ease;
+    opacity: 0;
+}
+
+.Benefits .searchHospitalpic-container:hover .searchHospitalpic-overlay {
+    opacity: 1;
+}
+
+.Benefits .articlepic-container .articlepic {
+    width: 100%;
+    height: 100%;
     top: 664px;
     left: 884px;
+    object-fit: cover;
+}
+
+.Benefits .articlepic-container {
+    position: relative;
+    width: 380px;
+    height: 260px;
+}
+
+.Benefits .articlepic-overlay {
+    position: absolute;
+    top: 13px;
+    left: 22px;
+    width: 335px;
+    height: 230px;
+    border-radius: 8px;
+    background-color: rgba(0, 96, 92, 0.5);
+    transition: opacity 0.3s ease;
+    opacity: 0;
+}
+
+.Benefits .articlepic-container:hover .articlepic-overlay {
+    opacity: 1;
 }
