--- a/src/pages/Home/homeContainer/style.css
+++ b/src/pages/Home/homeContainer/style.css
@@ -46,7 +46,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 100%;
+    max-width: 100vw;
 }
 
 .HomePage .fifth {
